# paper-galaxy

./: .gitignore  AGENTS.md  CHANGELOG.md  CHANGELOG.zh-CN.md  CITATION.cff  CODE_OF_CONDUCT.md  CODE_OF_CONDUCT.zh-CN.md  CONTRIBUTING.md  CONTRIBUTING.zh-CN.md  LICENSE  MANIFEST.in  Makefile  README.md  README.zh-CN.md  SECURITY.md  SECURITY.zh-CN.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  pages.yml  release.yml
docs/: ARCHITECTURE.md  ARCHITECTURE.zh-CN.md  BACKUP_AND_RESTORE.md  BACKUP_AND_RESTORE.zh-CN.md  CLOUD_LIBRARY_DESIGN.md  CLOUD_LIBRARY_DESIGN.zh-CN.md  DECISIONS.md  DECISIONS.zh-CN.md  DEMO_GUIDE.md  DEMO_GUIDE.zh-CN.md  FAQ.md  FAQ.zh-CN.md  FEEDBACK.md  FEEDBACK.zh-CN.md  INSTALL.md  INSTALL.zh-CN.md  LAUNCH_NOTES.md  LAUNCH_NOTES.zh-CN.md  PRIVACY.md  PRIVACY.zh-CN.md  PUBLISHING_CHECKLIST.md  PUBLISHING_CHECKLIST.zh-CN.md  READING_GRAPH.md  READING_GRAPH.zh-CN.md  RELEASE.md  RELEASE.zh-CN.md  ROADMAP.md  ROADMAP.zh-CN.md  TRIAGE.md  TROUBLESHOOTING.md  TROUBLESHOOTING.zh-CN.md  ZOTERO_INTEGRATION.md  ZOTERO_INTEGRATION.zh-CN.md  ZOTERO_REAL_WORLD_TESTING.md  ZOTERO_REAL_WORLD_TESTING.zh-CN.md
docs/cloud-library/: API_SKETCH.md  ARCHITECTURE.md  DATA_MODEL.md  PRIVACY_AND_SECURITY.md  PRODUCT_SPEC.md  README.md  README.zh-CN.md  ROADMAP.md  THREAT_MODEL.md
examples/tiny_corpus/neural_operators/: deep_operator_network.txt  fourier_neural_operator.md
examples/tiny_corpus/numerical_pdes/: finite_difference_notes.md  spectral_methods.tex
examples/tiny_corpus/randomized_nla/: randomized_svd.md  sketching_least_squares.txt
examples/tiny_corpus/thesis/: literature_plan.txt  thesis_ideas.md
scripts/: __init__.py  build_demo_site.py  check_demo_site.py  check_live_site.py  launch_report.py  public_readiness_check.py
site/: index.html
site/assets/: demo.js  graph-demo.js  styles.css
site/cloud-library/: index.html
site/data/: features.json  tiny-map.json
site/demo/: index.html
site/install/: index.html
site/privacy/: index.html
site/zh-cn/: index.html
site/zh-cn/cloud-library/: index.html
site/zh-cn/demo/: index.html
site/zh-cn/install/: index.html
site/zh-cn/privacy/: index.html
src/paper_galaxy/: __init__.py  chunking.py  cli.py  config.py  errors.py  indexer.py  logging.py  models.py  paths.py  pipeline.py  records.py  search.py  validation.py
src/paper_galaxy/backup/: __init__.py  bundle.py
src/paper_galaxy/embeddings/: __init__.py  builder.py  codec.py  index.py  models.py  search.py  sentence_transformers.py  similarity.py
src/paper_galaxy/explain/: __init__.py  clusters.py  labels.py  models.py  pairs.py
src/paper_galaxy/export/: __init__.py  html.py  json.py
src/paper_galaxy/extract/: __init__.py  latex.py  markdown.py  ocr.py  pdf.py  text.py
src/paper_galaxy/ingest/: __init__.py  scanner.py
src/paper_galaxy/maps/: __init__.py  runs.py
src/paper_galaxy/ml/: __init__.py  cluster.py  labels.py  layout.py  (+2 more)
tests/: test_backup.py  test_cli.py  test_demo_site.py  test_embedding_builder_search.py  test_embedding_codec.py  test_embedding_model_loading.py  test_embedding_storage.py  test_explain_labels.py  test_explain_pairs.py  test_extractors.py  test_import.py  test_indexer.py  test_live_site_check.py  test_map_runs.py  test_packaging.py  test_pipeline.py  test_plugins.py  test_public_launch_files.py  test_public_readiness.py  test_scanner.py  test_search.py  test_storage.py  test_validation.py  test_web_api.py  test_web_static_assets.py  test_zotero_integration.py
(+35 files in other folders)
