[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "paper-galaxy"
version = "0.0.1"
description = "Local-first research cartography for personal paper libraries."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Paper Galaxy contributors" },
]
dependencies = [
  "typer>=0.9",
  "rich>=13.0",
  "pydantic>=1.10",
  "platformdirs>=3.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.5",
  "mypy>=1.8",
  "httpx>=0.27",
]
pdf = [
  "pypdf>=4.0",
]
ml = [
  "numpy>=1.26",
  "scipy>=1.11",
  "scikit-learn>=1.4",
  "umap-learn>=0.5",
]
embeddings = [
  "sentence-transformers>=3.0",
  "faiss-cpu>=1.8",
]
app = [
  "fastapi>=0.110",
  "uvicorn>=0.27",
]
export = [
  "plotly>=5.0",
]

[project.scripts]
paper-galaxy = "paper_galaxy.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"paper_galaxy.storage" = ["schema.sql"]
"paper_galaxy.web" = [
  "static/index.html",
  "static/app.js",
  "static/graph.js",
  "static/styles.css",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "RUF", "UP"]

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
no_implicit_optional = true
ignore_missing_imports = true
